feat: Integração com banco de dados para registro de rotas do robô
Este commit introduz a funcionalidade de armazenamento das rotas percorridas pelo robô no banco de dados. As principais mudanças incluem:

- Criação do banco de dados `bd_simulador_robo` e da tabela `rota` para armazenar as coordenadas da rota do robô.
- Adaptação da aplicação Java para conectar-se ao banco de dados criado e realizar operações de inserção.
- Implementação de lógica para registrar cada movimento do robô na tabela `rota`, permitindo a persistência dos dados de navegação.

Essas alterações visam melhorar a capacidade de análise e acompanhamento das rotas realizadas pelo robô, facilitando a otimização de trajetos e a identificação de padrões de movimento.